# End-to-end-ML-Project-with-MLflow

./: Dockerfile  LICENSE  README.md  app.py  main.py  pyproject.toml  setup.py  template.py
.github/workflows/: main.yaml
mlruns/0/: meta.yaml
mlruns/0/29081b68e098453e8a84e8f3612b54bc/: meta.yaml
mlruns/0/29081b68e098453e8a84e8f3612b54bc/metrics/: mae  r2  rmse
mlruns/0/40edc24b3c5b4141b3749fa1786f938b/: meta.yaml
mlruns/0/4df4fbf4354544ed9553ec853032d3d7/: meta.yaml
mlruns/0/58dd4390e98446ec996dff216fb6f414/: meta.yaml
mlruns/0/591f2f25bfff4eaa9916fd6a873e16c7/: meta.yaml
mlruns/0/b747dee04f834e14867c02ba4cdeb9c0/: meta.yaml
mlruns/0/c73efe3db8cd49ed95b0ed0a07797409/: meta.yaml
mlruns/0/e22a92b1aac948018163baab9d667e41/: meta.yaml
mlruns/0/e946517beff7472387e2c217c1dd1b35/: meta.yaml
mlruns/0/e9a09a8f49de45449b1c9c81867db346/: meta.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  trials.ipynb
src/ML_Project/: __init__.py
src/ML_Project/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/ML_Project/config/: configuration.py
src/ML_Project/entity/: config_entity.py
src/ML_Project/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/ML_Project/utils/: common.py
templates/: index.html  results.html
(+88 files in other folders)
