[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ML_Project"
version = "0.0.0"
description = "A small python package for ml app"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "EssamShenhab", email = "essam119999@gmail.com" }
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/EssamShenhab/End-to-end-ML-Project-with-MLflow"
"Bug Tracker" = "https://github.com/EssamShenhab/End-to-end-ML-Project-with-MLflow/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
